--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="libs/swt.jar"/>
 	<classpathentry kind="lib" path="libs/commons-httpclient-3.1.jar"/>
 	<classpathentry kind="lib" path="libs/commons-net-ftp-2.0.jar"/>
+	<classpathentry kind="lib" path="libs/jxl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
